--- a/index.html
+++ b/index.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
-    <meta name="viewport" content="width: device-width, initial-scale: 1 " charset="UTF-8" />
+    <title>Counter</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="src/styles.css" />
+    <link rel="icon" href="clock.png">
   </head>
 
   <body>
 
     <header class="app-header">
-      Contador JS Simples
+      <div class="image-header">
+        <img style="max-width: 100%;" src="clock.png"/>
+      </div>
+      <h3>Contador JS Simples</h3>
     </header>
     <main class="counter-dashboard">
 
       <section class="counter-dias">
-        <h1>Dias:</h1>
-        <p>0</p>
+        <h1>Dias</h1>
+        <p class="get-days">0</p>
       </section>
 
       <section class="counter-horas">
-          <h1>Horas:</h1>
-          <p>0</p>
+          <h1>Horas</h1>
+          <p class="get-hours">0</p>
       </section>
 
-      <section class="counter-minutos">
-        
-          <h1>Minutos:</h1>
-          <p >0</p>
+      <section class="counter-minutos">        
+          <h1>Minutos</h1>
+          <p class="get-minutes">0</p>
       </section>
         
       <section class="counter-segundos">
-          <h1>Segundos:</h1>
-          <p>0</p>
+          <h1>Segundos</h1>
+          <p class="get-seconds">0</p>
       </section>            
+
     </main>
-      <form >
+      <div>
         <div class="counter-form">
-          <input value="data" id="dataUser" type="date" />
-          <button class="button-form">Submit</button>
+          <input id="dataUser" type="date" />
+          <button onclick="getUserDate()" class="button-form">Submit</button>
         </div>        
-      </form>  
-    <script src="src/index.js"></script>
+      </div>  
   </body>
+  <script defer src="src/index.js"></script>
 </html>
